--- a/about.html
+++ b/about.html
@@ -206,9 +206,24 @@
 
       <section class="section text-center services">
         <h3>Unisciti a noi!</h3>
-        <h6> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o pensi che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</h6>
+        <div class="note-strip">
+          <div class="note-column">
+              <!-- Puoi inserire un'icona di nota musicale qui -->
+              <i class="note-icon">🎵</i>
+          </div>
+          <div class="note-column center-column">
+            <h6> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o pensi 
+              che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</h6>
+          </div>
+          <div class="note-column">
+              <!-- Puoi inserire un'altra icona di nota musicale qui -->
+              <i class="note-icon">🎶</i>
+          </div>
+      </div>
+        
           <div class="download-button">
-            <a class="button button-outline button-sm" href="https://drive.google.com/uc?export=download&id=1RhQLiah44LlVP_wreFKVPfLXDKaKPMGK">Scarica il modulo</a></div>
+            <a class="button button-outline button-sm" 
+            href="https://drive.google.com/uc?export=download&id=1RhQLiah44LlVP_wreFKVPfLXDKaKPMGK">Scarica il modulo</a></div>
       </section>
 
       <section class="section section-lg bg-default">
