change scaricare modulo

--- a/about.html
+++ b/about.html
@@ -206,24 +206,31 @@
 
       <section class="section text-center services">
         <h3>Unisciti a noi!</h3>
-        <div class="note-strip">
-          <div class="note-column">
-              <!-- Puoi inserire un'icona di nota musicale qui -->
-              <i class="note-icon">🎵</i>
+        <div class="row">
+          <div class="col-lg-4 col-sm-12">
+              <div class="service-item">
+                  <div class="service-icon">
+                    <i class="fa-solid fa-church"></i>
+                  </div>
+              </div>
           </div>
-          <div class="note-column center-column">
+          <div class="col-lg-4 col-sm-12">
             <h6> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o pensi 
               che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</h6>
-          </div>
-          <div class="note-column">
-              <!-- Puoi inserire un'altra icona di nota musicale qui -->
-              <i class="note-icon">🎶</i>
+              <div class="download-button">
+                <a class="button button-outline button-sm" 
+                href="https://drive.google.com/uc?export=download&id=1RhQLiah44LlVP_wreFKVPfLXDKaKPMGK">Scarica il modulo</a></div>
+            </div>
+          <div class="col-lg-4 col-sm-12">
+              <div class="service-item">
+                  <div class="service-icon">
+                      <i class="fas fa-cross"></i>
+                  </div>
+              </div>
           </div>
       </div>
         
-          <div class="download-button">
-            <a class="button button-outline button-sm" 
-            href="https://drive.google.com/uc?export=download&id=1RhQLiah44LlVP_wreFKVPfLXDKaKPMGK">Scarica il modulo</a></div>
+          
       </section>
 
       <section class="section section-lg bg-default">
