change scaricare modulo

--- a/about.html
+++ b/about.html
@@ -210,7 +210,7 @@
           <div class="col-lg-4 col-sm-12">
               <div class="service-item">
                   <div class="service-icon">
-                    <i class="fa-solid fa-church"></i>
+                    <i class="fa-solid fa-guitar"></i>
                   </div>
               </div>
           </div>
@@ -224,7 +224,7 @@
           <div class="col-lg-4 col-sm-12">
               <div class="service-item">
                   <div class="service-icon">
-                      <i class="fas fa-cross"></i>
+                      <i class="fa-solid fa-music"></i>
                   </div>
               </div>
           </div>
