change scaricare modulo

--- a/about.html
+++ b/about.html
@@ -209,6 +209,9 @@
         <div class="row">
           <div class="col-lg-4 col-sm-12">
               <div class="service-item">
+                <h6>Le prove per i piccoli</h6>
+                <h6>Il primo sabato del mese alle 15:30</h6>
+                <h6>Tutte le domiche alle 10:15 prima della celebrazione</h6>
                   <div class="service-icon">
                     <i class="fa-solid fa-guitar"></i>
                   </div>
@@ -222,6 +225,8 @@
                 href="https://drive.google.com/uc?export=download&id=1RhQLiah44LlVP_wreFKVPfLXDKaKPMGK">Scarica il modulo</a></div>
             </div>
           <div class="col-lg-4 col-sm-12">
+            <h6>Le prove per gli adulti</h6>
+            <h6>Il mercoledì sera alle 21:00</h6>
               <div class="service-item">
                   <div class="service-icon">
                       <i class="fa-solid fa-music"></i>
