change scaricare modulo

--- a/about.html
+++ b/about.html
@@ -210,7 +210,7 @@
           <div class="col-lg-4 col-sm-12">
               <div class="service-item">
                 <h5>Le prove per i piccoli</h5>
-                <h6>Il primo sabato del mese alle 15:30. Tutte le domiche alle 10:15 prima della celebrazione</h6>
+                <p class="box-bio-text">Iniziativa organizzata dall'Avis di Turate per sostenere il progetto Telethon e la ricerca sulle malattie genetiche.</p>
                   <div class="service-icon">
                     <i class="fa-solid fa-guitar"></i>
                   </div>
