change scaricare modulo

--- a/about.html
+++ b/about.html
@@ -210,7 +210,7 @@
           <div class="col-lg-4 col-sm-12">
               <div class="service-item">
                 <h5>Le prove per i piccoli</h5>
-                <p class="box-bio-text">Iniziativa organizzata dall'Avis di Turate per sostenere il progetto Telethon e la ricerca sulle malattie genetiche.</p>
+                <p class="box-bio-text">Il primo sabato del mese alle 15:30</p>
                   <div class="service-icon">
                     <i class="fa-solid fa-guitar"></i>
                   </div>
@@ -225,7 +225,7 @@
             </div>
           <div class="col-lg-4 col-sm-12">
             <h5>Le prove per gli adulti</h5>
-            <h6>Il mercoledì sera alle 21:00</h6>
+            <p class="box-bio-text">Il primo sabato del mese alle 15:30</p>
               <div class="service-item">
                   <div class="service-icon">
                       <i class="fa-solid fa-music"></i>
