change scaricare modulo

--- a/about.html
+++ b/about.html
@@ -221,9 +221,17 @@
                 che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</h6>
               <div class="download-button">
                 <a class="button button-outline button-sm" 
-                href="https://drive.google.com/uc?export=download&id=1RhQLiah44LlVP_wreFKVPfLXDKaKPMGK">Scarica il modulo</a></div>
-             </div>
+                href="https://drive.google.com/uc?export=download&id=1RhQLiah44LlVP_wreFKVPfLXDKaKPMGK">Scarica il modulo</a>
+              </div>
           </div>
+          <div class="col-lg-4 col-sm-12">
+            <h6> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o pensi 
+              che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</h6>
+            <div class="download-button">
+              <a class="button button-outline button-sm" 
+              href="https://drive.google.com/uc?export=download&id=1RhQLiah44LlVP_wreFKVPfLXDKaKPMGK">Scarica il modulo</a>
+            </div>
+        </div>
       </div>
         
           
