change scaricare modulo

--- a/about.html
+++ b/about.html
@@ -225,11 +225,12 @@
               </div>
           </div>
           <div class="col-lg-4 col-sm-12">
-            <h6> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o pensi 
-              che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</h6>
-            <div class="download-button">
-              <a class="button button-outline button-sm" 
-              href="https://drive.google.com/uc?export=download&id=1RhQLiah44LlVP_wreFKVPfLXDKaKPMGK">Scarica il modulo</a>
+            <div class="service-item">
+                <h5>Le prove per i piccoli</h5>
+                <p class="box-bio-text">Il primo sabato del mese alle 15:30</p>
+                <div class="service-icon">
+                  <i class="fa-solid fa-guitar"></i>
+                </div>
             </div>
         </div>
       </div>
