change scaricare modulo

--- a/about.html
+++ b/about.html
@@ -217,7 +217,7 @@
               </div>
           </div>
           <div class="col-lg-4 col-sm-12">
-            <p class="box-bio-text" text-align="justify"> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o pensi 
+            <p class="box-bio-text justofy-text"> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o pensi 
                 che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</p>
               <div class="download-button">
                 <a class="button button-outline button-sm" 
