change scaricare modulo

--- a/about.html
+++ b/about.html
@@ -229,7 +229,7 @@
                 <h5>Le prove per gli adulti</h5>
                 <p class="box-bio-text">Il mercoledì sera  ale 21:30</p>
                 <div class="service-icon">
-                  <i class="fa-solid fa-guitar"></i>
+                  <i class="fa-solid fa-music"></i>
                 </div>
             </div>
         </div>
