change scaricare modulo

--- a/index.html
+++ b/index.html
@@ -135,10 +135,12 @@
         <div class="row">
             <div class="col-lg-4 col-sm-12">
                 <div class="service-item">
+                  <a href="archive.html#animazione-liturgica">
                     <div class="service-icon">
                       <i class="fa-solid fa-church"></i>
                     </div>
                     <h5>Animazione Liturgica</h5>
+                    </a>
                 </div>
             </div>
             <div class="col-lg-4 col-sm-12">
