--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="row">
             <div class="col-lg-4 col-sm-12">
                 <div class="service-item">
-                  <a href="archive.html#animazione-liturgica">
+                  <a href="typography.html#anlit">
                     <div class="service-icon">
                       <i class="fa-solid fa-church"></i>
                     </div>
