change scaricare modulo

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">Chi siamo</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Archivio testi</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="testi.html">Archivio testi</a>
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contatti</a>
                       </li>
@@ -135,7 +135,7 @@
         <div class="row">
             <div class="col-lg-4 col-sm-12">
                 <div class="service-item">
-                  <a href="typography.html#anlit">
+                  <a href="testi.html">
                     <div class="service-icon">
                       <i class="fa-solid fa-church"></i>
                     </div>
@@ -145,18 +145,22 @@
             </div>
             <div class="col-lg-4 col-sm-12">
                 <div class="service-item">
+                  <a href="testi.html"></a>
                     <div class="service-icon">
                       <i class="fas fa-heart"></i> 
                     </div>
                     <h5>Matrimoni</h5>
+                  </a>
                 </div>
             </div>
             <div class="col-lg-4 col-sm-12">
                 <div class="service-item">
+                  <a href="testi.html"></a>
                     <div class="service-icon">
                         <i class="fas fa-cross"></i>
                     </div>
                     <h5>Funerali</h5>
+                  </a>
                 </div>
             </div>
         </div>
