--- a/contacts.html
+++ b/contacts.html
@@ -48,7 +48,7 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">Chi siamo</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Archivio testi</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="testi.html">Archivio testi</a>
                       </li>
                       <li class="rd-nav-item active"><a class="rd-nav-link" href="contacts.html">Contatti</a>
                       </li>
