change scaricare modulo

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </div>
             <div class="col-lg-4 col-sm-12">
                 <div class="service-item">
-                  <a href="testi.html"></a>
+                  <a href="testi.html">
                     <div class="service-icon">
                       <i class="fas fa-heart"></i> 
                     </div>
@@ -155,7 +155,7 @@
             </div>
             <div class="col-lg-4 col-sm-12">
                 <div class="service-item">
-                  <a href="testi.html"></a>
+                  <a href="testi.html">
                     <div class="service-icon">
                         <i class="fas fa-cross"></i>
                     </div>
