change scaricare modulo

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
             <div class="col-lg-4 col-sm-12">
                 <div class="service-item">
-                  <a href="testi.html">
+                  <a href="testi.html#funerali">
                     <div class="service-icon">
                         <i class="fas fa-cross"></i>
                     </div>
