--- a/index.html
+++ b/index.html
@@ -144,9 +144,11 @@
             </div>
             <div class="col-lg-4 col-sm-12">
                 <div class="service-item">
+                  <a href="testi.html">
                     <div class="service-icon">
                       <i class="fas fa-heart"></i> 
                     </div>
+                    </a>
                     <h5>Matrimoni</h5>
                 </div>
             </div>
