--- a/index.html
+++ b/index.html
@@ -135,16 +135,18 @@
         <div class="row">
             <div class="col-lg-4 col-sm-12">
                 <div class="service-item">
+                  <a href="testi.html">
                     <div class="service-icon">
                       <i class="fa-solid fa-church"></i>
                     </div>       
+                  </a>
                     <h5>Animazione Liturgica</h5>
               
                 </div>
             </div>
             <div class="col-lg-4 col-sm-12">
                 <div class="service-item">
-                  <a href="testi.html">
+                  <a href="testi.html#matrimoni">
                     <div class="service-icon">
                       <i class="fas fa-heart"></i> 
                     </div>
@@ -154,10 +156,12 @@
             </div>
             <div class="col-lg-4 col-sm-12">
                 <div class="service-item">
+                  <a href="testi.html">
                     <div class="service-icon">
                         <i class="fas fa-cross"></i>
                     </div>
                     <h5>Funerali</h5>
+                  </a>
                 </div>
             </div>
         </div>
