--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </div>
             <div class="col-lg-4 col-sm-12">
                 <div class="service-item">
-                  <a href="testi.html#matrimoni">
+                  <a href="testi.html">
                     <div class="service-icon">
                       <i class="fas fa-heart"></i> 
                     </div>
@@ -183,7 +183,7 @@
               </div>
               <div class="tab-pane fade" id="tabs-2-2">
                 <div class="entry-video embed-responsive embed-responsive-16by9">
-                  <iframe width="886" height="668" src="preview" allowfullscreen=""></iframe>
+                  <iframe width="886" height="668" src="https://drive.google.com/file/d/117Y2aUO2pdezWmtEZihZKSCTigFtfiPs/preview" allowfullscreen=""></iframe>
                 </div>
               </div>
               
@@ -224,7 +224,7 @@
                     </div></a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-2-2" data-toggle="tab">
                     <div class="nav-video">
-                      <figure class="nav-video-figure"><img src="/preview" alt="" width="140" height="40"/>
+                      <figure class="nav-video-figure"><img src="https://drive.google.com/file/d/117Y2aUO2pdezWmtEZihZKSCTigFtfiPs/preview" alt="" width="140" height="40"/>
                       </figure>
                       <h6 class="nav-video-title">Concerto di Natale 2022 (virtuale)</h6>
                     </div></a></li>
