--- a/about.html
+++ b/about.html
@@ -221,7 +221,7 @@
                 che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</p>
               <div class="download-button">
                 <a class="button button-outline button-sm" 
-                href="images/modulo.JPG">Scarica il modulo</a>
+                href="images/modulo.JPG" download="modulo.JPG">Scarica il modulo</a>
               </div>
           </div>
           <div class="col-lg-4 col-sm-12">
