--- a/contacts.html
+++ b/contacts.html
@@ -114,7 +114,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6 col-md-8 col-sm-10">
-              <h3>rimani in contatto con noi</h3>
+              <h3>Rimani in contatto con noi</h3>
               <p class="text-gray-600">Contattaci usando il form sottostante</p>
             </div>
           </div>
