change initial phrase

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <div class="container">
                 <div class="row justify-content-lg-center">
                   <div class="col-lg-8">
-                    <h5 data-caption-animate="fadeInUp" data-caption-delay="100">Cantare è pregare due volte</h5>
+                    <h4 data-caption-animate="fadeInUp" data-caption-delay="100">Cantare è pregare due volte</h4>
                     <h1 data-caption-animate="fadeInUp" data-caption-delay="200"> </h1>
                   </div>
                 </div>
@@ -91,7 +91,7 @@
               <div class="container">
                 <div class="row justify-content-lg-center">
                   <div class="col-lg-8">
-                    <h5 data-caption-animate="fadeInUp" data-caption-delay="100">Chi ha il cuore contento, sempre canta</h5>
+                    <h4 data-caption-animate="fadeInUp" data-caption-delay="100">Chi ha il cuore contento, sempre canta</h4>
                   </div>
                 </div>
               </div>
@@ -102,7 +102,7 @@
               <div class="container">
                 <div class="row justify-content-lg-center">
                   <div class="col-lg-8">
-                    <h5 data-caption-animate="fadeInUp" data-caption-delay="100">mettere un frase</h5>
+                    <h4 data-caption-animate="fadeInUp" data-caption-delay="100">Cammineremo insieme a te</h4>
                   </div>
                 </div>
               </div>
