--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
             </div>
           </div>
         </div>
-      
+        <div class="row no-gutters"></div>
         </div>
       </section>
 
