--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
         </div>
       </header>
       <!-- Breadcrumbs-->
-      <section class="breadcrumbs-custom bg-image context-dark" style="background-color: #222d4f;">
+      <section class="breadcrumbs-custom bg-image context-dark">
         <div class="container">
           <h2 class="breadcrumbs-custom-title">Chi siamo</h2>
         </div>
@@ -196,17 +196,17 @@
         <div class="row">
           <div class="col-lg-4 col-sm-12">
               <div class="service-item">
-                  <h5>Le prove per i piccoli</h5>
-                  <p class="box-bio-text">Il primo sabato del mese alle 15:30</p>
+                <h5 class="service-item justify-text">Le prove per i piccoli</h5>
+                  <p class="service-item justify-text">Il primo sabato del mese alle 15:30</p>
                   <div class="service-icon">
                     <i class="fa-solid fa-guitar"  ></i>
-                    <div class="notesContainer"></div>
+          
                   </div>
               </div>
           </div>
           <div class="col-lg-4 col-sm-12">
-            <p class="box-bio-text justofy-text"> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o pensi 
-                che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</p>
+            <h6 class="service-item "> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o pensi 
+                che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</h6>
               <div class="download-button">
                 <a class="button button-outline button-sm" 
                 href="https://drive.google.com/uc?export=download&id=1qTLy3T5CjzVzTMle1wq7t5NY4an3VvWT">Scarica il modulo</a>
@@ -214,11 +214,11 @@
           </div>
           <div class="col-lg-4 col-sm-12">
             <div class="service-item">
-                <h5>Le prove per gli adulti</h5>
-                <p class="box-bio-text">Il mercoledì sera  ale 21:30</p>
+              <h5 class="service-item justify-text">Le prove per gli adulti</h5>
+                <p class="service-item">Il mercoledì sera  ale 21:30</p>
                 <div class="service-icon">
                   <i class="fa-solid fa-music" ></i>
-                  <div class="notesContainer"></div>
+        
                 </div>
             </div>
         </div>
@@ -405,7 +405,8 @@
         <div class="container">
           <div class="row row-15">
             <div class="col-sm-6">
-              <p class="rights"><span>Coro Su Ali d'Aquila</span><span>&nbsp;</span><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>\&nbsp;</span>All Rights Reserved
+              <p class="rights"><span>Coro Su Ali d'Aquila</span><span>&nbsp;</span><span>&copy;&nbsp;</span>
+                <span class="copyright-year"></span><span>&nbsp;</span><span>\&nbsp;</span>All Rights Reserved
                 \ Design by TemplateMonster and Martina Monti
               </p>
             </div>
