--- a/testi.html
+++ b/testi.html
@@ -71,8 +71,7 @@
         </div>
       </header>
       <!-- Breadcrumbs-->
-      <section class="breadcrumbs-custom bg-image context-dark" 
-      style="background-color: #222d4f;">
+      <section class="breadcrumbs-custom bg-image context-dark">
         <div class="container">
           <h2 class="breadcrumbs-custom-title">Archivio testi</h2>
         </div>
