--- a/archive.html
+++ b/archive.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
-    <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
+    <style>.ie-panel{display: none;background: #03045e;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
   </head>
   <body>
     <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/">
@@ -29,7 +29,6 @@
       
       
     <div class="page">
-      <!-- Banner 1--><a class="section section-banner d-none d-xl-block section-banner-top" href="https://www.templatemonster.com/intense-multipurpose-html-template.html" target="blank" style="background-image: url(images/banner/background-02-1920x60.jpg); background-image: -webkit-image-set( url(images/banner/background-02-1920x60.jpg) 1x, url(images/banner/background-02-3840x120.jpg) 2x )"><img src="images/banner/foreground-02-1600x60.png" srcset="images/banner/foreground-02-1600x60.png 1x, images/banner/foreground-02-3200x120.png 2x" alt="" width="1600" height="310"></a>
       <header class="section page-header">
         <!--RD Navbar-->
         <div class="rd-navbar-wrap" style="position: absolute">
@@ -74,8 +73,7 @@
         </div>
       </header>
       <!-- Breadcrumbs-->
-      <section class="breadcrumbs-custom bg-image context-dark" 
-      style="background-color: #4c5a86;">
+      <section class="breadcrumbs-custom bg-image context-dark" style="background-color: #0077b6">
         <div class="container">
           <h2 class="breadcrumbs-custom-title">Archivio</h2>
         </div>
