--- a/contacts.html
+++ b/contacts.html
@@ -67,7 +67,7 @@
         </div>
       </header>
       <!-- Breadcrumbs-->
-      <section class="breadcrumbs-custom bg-image context-dark" style="background-color: #222d4f;">
+      <section class="breadcrumbs-custom bg-image context-dark">
         <div class="container">
           <h2 class="breadcrumbs-custom-title">Contatti</h2>
         </div>
@@ -79,9 +79,9 @@
       <section class="section section-md bg-default">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6 col-md-8 col-sm-10">
+            <div class="text-center">
               <h3>Contattaci!</h3>
-              <p class="text-gray-600">Ti piace cantare? Sai suonare uno strumento? Vuoi unirti e collaborare con noi? Hai qualche domanda?.</p>
+              <h6 class="text-gray-600">Ti piace cantare? Sai suonare uno strumento? Vuoi unirti e collaborare con noi? Hai qualche domanda?.</h6>
             </div>
           </div>
           <div class="row row-50 justify-lg-content-center row-custom-border">
